fixing isLoading height bug
Former-commit-id: e3bfdc407a58234a4e6e0fbf50fdbf4322cddfbc [formerly 775e3c9e1a9db147bf45e3a0c3ec3c727d22ed0f] [formerly 8e5b509d01edbd11d73f0736a8093ee95ed7bab4 [formerly 811782a1ff0cc69b10c6b0c51a0dade7ab8b9035]]
Former-commit-id: 2b58ed02a6a14db420ada33a8dfc915f7b787511 [formerly 8d2b5ccf11d48decc1e3cd5040b6865e478ac6f2]
Former-commit-id: 7475ed482186869fef38b76cdd9c28e3868d6df2

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -223,7 +223,7 @@
                     </tr>                    
                 </tbody>
                 </table>
-                <div class="loaderCard" ng-show="isMoreItemLoading">
+                <div class="loaderList" ng-show="isMoreItemLoading">
                       <div class="loaderCardContent">
                          <img class="img-responsive " src="/static/img/gloader.gif">
                          <span> {{ _('Loading...')}}</span>
