--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -277,7 +277,7 @@
             </div>
           </div>
         </div>
-        <div class="cardElement loaderCard" ng-show="isLoadingtweets" data-span="all">
+        <div class="loaderCard" ng-show="isLoadingtweets" data-span="all">
           <div class="loaderCardContent">
              <img class="img-responsive " src="/static/img/gloader.gif">
              <span>  Loading...</span>
