--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -347,7 +347,7 @@
                     </tr>                    
                 </tbody>
                 </table>
-                <div class="loaderCard" ng-show="isMoreItemLoading">
+                <div class="loaderList" ng-show="isMoreItemLoading">
                       <div class="loaderCardContent">
                          <img class="img-responsive " src="/static/img/gloader.gif">
                          <span> {{ _('Loading...')}}</span>
@@ -472,7 +472,7 @@
               </div>
             </div>
           </div>
-          <div class="cardElement loaderCard" ng-show="isMoreItemLoading" data-span="all">
+          <div class="loaderCard" ng-show="isMoreItemLoading" data-span="all">
             <div class="loaderCardContent">
                <img class="img-responsive " src="/static/img/gloader.gif">
                <span> {{ _('Loading...')}}</span>
