--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -1091,7 +1091,7 @@ function onSignInCallback(authResult) {
 <p class="profile-name">{{ _("Hi") }} {{userinfo.google_display_name }}</p>
 <form class="sign-up-form" action="" method="POST">
 
-                          <input required autofocus type="text" name="org_name" placeholder="Type here your company name" >
+                          <input required autofocus type="text" name="org_name" placeholder=" Company name" >
 
                           <!-- <input required autofocus type="text" name="tags" placeholder="Topics: #topic1, #topic2" > -->
 
