--- a/templates/discovers/discover_show.html
+++ b/templates/discovers/discover_show.html
@@ -35,6 +35,13 @@
       </div>
     </div>
   </div>
+  <div class="loader-container row" ng-show="markedAsLead">
+    <div class="loader-dialog col-md-4 col-md-offset-4 ">
+      <div class="loader-content">
+          {{ _('Added to leads...')}}
+      </div>
+    </div>
+  </div>
   <div class="container" ng-show="immediateFailed">
     <div class="col-md-12">
 
