--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -403,12 +403,12 @@
             </div>
               <div class="col-md-3 ">
                   <div class="row">                    
-                     <div class="col-md-12">
+                    <!-- <div class="col-md-12">
                       <!-- BEGIN PORTLET-->
-                      <div class="portlet showPage rightCardContent">
+                      <!-- <div class="portlet showPage rightCardContent">
                         <div class="portlet-title line">
                           <div class="caption"><!--<i class="fa fa-linkedin" style='color:#169ef4'></i>-->                            
-                            {{_('Do you mean...')}}                            
+                           <!--  {{_('Do you mean...')}}                            
                           </div>
 
                         </div>
@@ -436,7 +436,7 @@
                             <div class="clearfix"></div>
                         </div>
                       </div>
-                    </div>
+                    </div>-->
                      <div class="col-md-12">
                       <!-- BEGIN PORTLET-->
                       <div class="portlet showPage rightCardContent">
