--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -420,7 +420,7 @@
                 <div class="cardElement loaderCard" ng-hide="isMoreItemLoading" data-span="all">
                 <div class="loaderCardContent">
                    
-                   <a ng-click="ShowMoreItems()"> {{ _('Show more...')}}</a>
+                   <a ng-click="listMoreItems()"> {{ _('Show more...')}}</a>
                 </div>
               </div>
               <div class="cardElement loaderCard" ng-show="isMoreItemLoading" data-span="all">
