fix bugs when creating a new opporuntiy fix #1491 #1481
Former-commit-id: 66eabe408231a676ae3104d10595dde1e18b968b [formerly 31e06a32811adb991575ce3e353c56fa9bc85945] [formerly ab4dcd9a04b225b25e5d1c09799248b2a6601c71 [formerly d8977093a06adad460f5b770aa86ba67e971f227]]
Former-commit-id: 1e2cf7ba67c39854fcba55bce4de58596ae4b6a0 [formerly 70f183b1339b4554056474a9f99a4798fee8b84a]
Former-commit-id: b88519bee6b5c1b5e93dbe9369bc89655f3adf76

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -429,7 +429,8 @@
                 <div class="pic">
                  <!-- <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">-->
                  <img ng-hide="account.logo_img_id" alt="account.name" class="img-resonsive img-thumbnail" src="/static/img/default_company.png">
-                  <img  ng-show="account.logo_img_id" alt="account.name" class="img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2" >
+                  <img  ng-show="account.logo_img_id" alt="account.name" class="img-resonsive img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2" >
+
                   <!--</a>-->
                 </div>
                 <div class="text">
