--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -888,8 +888,8 @@
                                         </div>
                                         <div class="col-md-8 col-xs-8">
                                           <div class="oppDescription row">
-                                                  <a href="/#/opportunities/show/<%= opportunity.id %>" title="<%= opportunity.name %>"><h4 style="height:26px" class="fittext ellipsis" min-font-size="14" max-font-size="22"  text="opportunity.name">
-                                                    <span class="fittext" max-font-size="18"  text="opportunity.name"></span>
+                                                  <a href="/#/opportunities/show/<%= opportunity.id %>" title="<%= opportunity.name %>"><h4 style="height:26px" class="fittext ellipsis" min-font-size="14" max-font-size="22"  text="<%=opportunity.name%>">
+                                                    <span class="fittext" max-font-size="18"  text="<%=opportunity.name%>"></span>
                                                   </h4></a>
 
                                           </div>
