Some change in list search page
Former-commit-id: e16cc9a3369539fd040175397539a42feb74f6f1 [formerly 4662770760c78885f7f49479512c2c0584302dc8] [formerly e45af4823f41e098f3a1086e030b6a057993279b [formerly 8cd25b41678a6af2b1381ca61553322e6ce99f0d]]
Former-commit-id: e7a138a426efedd3c3fcc55f8a30a16db70a2d2f [formerly 91fec9cb6efaf619937c814fe7a0215248ee580d]
Former-commit-id: 781cc8aca3d6f136dcc369c2995c1c8b01d77a39

--- a/templates/search/list.html
+++ b/templates/search/list.html
@@ -1,17 +1,17 @@
 <div class="row subHeader">
-   <div class="currentApp">
-         <div class="btn-group">
-           <a class="filterItem" href="#" data-toggle="dropdown" >
-            {{_(active_app.label)}}
-            <i class="icon-angle-down"></i>
-           </a>
-           <ul class="dropdown-menu">
-            {%for application in apps %}
+  <div class="currentApp">
+        <div class="btn-group">
+            <a class="filterItem" href="#" data-toggle="dropdown" >
+                {{_(active_app.label)}}
+                <i class="icon-angle-down fa fa-angle-down"></i>
+            </a>
+            <ul class="dropdown-menu">
+                {%for application in apps %}
 
-                  <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal">{{_(application.label)}}</a></li>
+                <li><a href="/apps/{{ application.key.id()}}" data-toggle="modal">{{_(application.label)}}</a></li>
 
-            {%endfor%}
-           </ul>
+                {%endfor%}
+            </ul>
         </div>
     </div>
 
