add the api to search from elastic search
Former-commit-id: d42b7e1ac3e8f79a86ce3cff0949e3587ee7d73f [formerly 1f16551a547440ca08a67c8aea057561b1c9883e] [formerly 37ad93d2189d7ccbf02531a787e76cdb0020201a [formerly ddc86df4a939d2bf2b533c1bda2ae266036ced29]]
Former-commit-id: 2995653e63deb0a5b9ae49c80416e011ef56542e [formerly b8cc71bc17f4c62e21d87c0f3bc847aeefa2f049]
Former-commit-id: 0fb4f27442641ac290698b8a7eee5db2dedd8be5

--- a/templates/search/list.html
+++ b/templates/search/list.html
@@ -104,7 +104,7 @@
 
             
             <div class="row cards-container">
-            <div class="col-md-12">
+            <div class="col-md-6">
             <div class="waterfall inner-cards-container resultsContainer">
             
               <div ng-repeat="result in searchResults" class="cardElement" data-tablet="span6" data-desktop="span3">
@@ -126,6 +126,44 @@
               <div class="clearfix"></div>
               </div>
              <div ng-show="!searchResults" class=" noResult col-md-12 responsive" data-tablet="span6" data-desktop="span12">
+
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="thumbnail blank_slate_body" ng-hide="isLoading">
+                      
+                      <p class="lead">{{ _('No results found, try with another term') }}</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
+
+              </div>        
+            <div class="col-md-6">
+            <div class=" inner-cards-container resultsContainer">
+            
+              <div ng-repeat="profile in profiles" class="cardElement" data-tablet="span6" data-desktop="span3">
+                <div class="eleContainer">
+                  
+                  <div class="details">
+                    <a href="<%=result.url%>">
+                    <p class="title" >
+                      <%= profile._source.fullname %>
+                    </p></a>
+                    <div class="desc">                           
+                      
+                       <p class="pull-right">(<%=profile._source.title%>)</p>
+                       <p class="pull-right">(<%=profile._score%>)</p>
+                    </div>
+                  </div>           
+                </div>
+              </div>
+
+              <div class="clearfix"></div>
+              </div>
+             <div ng-show="!porfiles" class=" noResult col-md-12 responsive" data-tablet="span6" data-desktop="span12">
 
                 <div class="dashboard-stat cards">
                   
