--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -273,10 +273,10 @@
                     </tr>                    
                 </tbody>
                 </table>
-                 <div class="loaderList" ng-hide="isMoreItemLoading">
+                 <div class="loaderList" ng-hide="(isMoreItemLoading || !leadpagination.next)">
                       <div class="loaderCardContent">
                        
-                         <a ng-click="listMoreItems()"> {{ _('Show more...')}}</a>
+                         <a href="" ng-click="listMoreItems()"> {{ _('Show more...')}}</a>
                       </div>
                 </div>
                 <div class="loaderList" ng-show="isMoreItemLoading">
@@ -414,16 +414,16 @@
                 </div>
               </div>
               
-                <div class="loaderCard" ng-hide="isMoreItemLoading" data-span="all">
+                <div class="loaderCard" ng-hide="(isMoreItemLoading || !leadpagination.next)" data-span="all">
                 <div class="loaderCardContent">
                    
-                   <a ng-click="listMoreItems()"> {{ _('Show more...')}}</a>
+                   <a href="" ng-click="listMoreItems()"> {{ _('Show more...')}} </a>
                 </div>
               </div>
               <div class="loaderCard" ng-show="isMoreItemLoading" data-span="all">
                 <div class="loaderCardContent">
                    <img class="img-responsive " src="/static/img/gloader.gif">
-                   <span>  Loading...</span>
+                   <span>  {{_('Loading...')}}</span>
                 </div>
               </div>
             </div><!--/inner-cards-container-->
