--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -28,7 +28,7 @@
           <!-- <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On')}}<span class="hidden-xs hiddenOnxs">{{ _('Maps')}}</span> </span -->
           
           
-            <div class="btn-group visibleOnPhone">
+       <!--      <div class="btn-group visibleOnPhone">
                 <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='filter'}" >
                   {{ _('Filter by')}}
                   <i class="icon-angle-down"></i>
@@ -39,7 +39,7 @@
                   <li><a ng-click="showTagFilterCard();selectedOption ='tags'" href="#" data-toggle="modal">{{ _('Tags') }}</a></li>
                   <li><a ng-click="filterByOwner('{{MAP}}');selectedOption ='map'" href="#" data-toggle="modal">{{ _('View on maps') }}</a></li>
                 </ul>
-          </div>
+          </div> -->
         <span role="button" class="filterItem hiddenOnPhone hiddenOnmd"  ng-class="{activeFilter: selectedOption =='tags'}" ng-click="showTagFilterCard();selectedOption ='tags'"><i class="fa fa-tags"></i><span class="hidden-xs hiddenOnxs">{{_('Filter by')}} </span> {{_('Tags')}}</span>
       </div>
      
