[list Page] - Don't show the show button on first time , fix #1581
Former-commit-id: 973cf82686623b2f34b597947a312c08847189c1 [formerly e318061982aa344ed9b5585a68ca91ec6fedcd90] [formerly 46001fb62b8e45c7962034a62903c58ffc606c30 [formerly 9c8a4f6f5429823518fe33bc2379dfd37870a715]]
Former-commit-id: 331a068b6192255df76b5a2b185abeee9e0308fb [formerly 91c83048ea5662e49698865eb396908f4f29c198]
Former-commit-id: ef953f55c3bcf311315cf372694eca73860e6c0b

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -273,7 +273,7 @@
                     </tr>                    
                 </tbody>
                 </table>
-                 <div class="loaderList" ng-hide="(isMoreItemLoading || !leadpagination.next)">
+                 <div class="loaderList" ng-show="(isbigScreen && leadpagination.next)">
                       <div class="loaderCardContent">
                        
                          <a href="" ng-click="listMoreItems()"> {{ _('Show more...')}}</a>
@@ -414,7 +414,7 @@
                 </div>
               </div>
               
-                <div class="loaderCard" ng-hide="(isMoreItemLoading || !leadpagination.next)" data-span="all">
+                <div class="loaderCard" ng-show="(isbigScreen && leadpagination.next)" data-span="all">
                 <div class="loaderCardContent">
                    
                    <a href="" ng-click="listMoreItems()"> {{ _('Show more...')}} </a>
